# simple-py-bevy

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/simple_py_bevy/: Cargo.toml  readme.md
crates/simple_py_bevy/src/: lib.rs  plugin.rs
crates/simple_py_bevy_derive/: Cargo.toml  readme.md
crates/simple_py_bevy_derive/src/: backend.rs  expand_methods.rs  lib.rs  py_bevy_comp.rs  py_bevy_config.rs  py_bevy_meth.rs  py_bevy_res.rs  py_ref.rs  simple_wrappers.rs
src/: lib.rs  plugin.rs  registry.rs  testing.rs  world_ref.rs
test/: test.py
