[package]
name = "simple-py-bevy"
license-file = "LICENSE"
authors = ["Lucas Weiler <lucas.l.weiler@leidos.com>"]
readme = "README.md"
version.workspace = true
edition.workspace = true
homepage = "https://github.com/lskyweiler/simple-py-bevy"

[workspace]
members = ["crates/*"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
simple_py_bevy_derive = { path = "crates/simple_py_bevy_derive" }

bevy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy = "~0.17"
pyo3 = { version = "~0.27", features = ["multiple-pymethods"] }
pyo3-stub-gen = { version = "~0.18", default-features = false }

[features]
py-bevy = ["dep:pyo3", "dep:bevy", "simple_py_bevy_derive/py-bevy"]
py-ref = ["dep:pyo3", "simple_py_bevy_derive/py-ref"]
testing = [
    "dep:pyo3",
    "dep:bevy",
    "dep:pyo3-stub-gen",
    "simple_py_bevy_derive/py-bevy",
    "simple_py_bevy_derive/py-ref",
]
