[package]
name = "simple-py-bevy"
license-file = "LICENSE"
authors = ["Lucas Weiler <lucas.l.weiler@leidos.com>"]
readme = "README.md"
version.workspace = true
edition.workspace = true
homepage = "https://github.com/lskyweiler/simple-py-bevy"

[workspace]
members = ["crates/*"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
simple_py_bevy_derive = { path = "crates/simple_py_bevy_derive" }

bevy = { workspace = true, optional = true }
pyo3 = { workspace = true, optional = true }
pyo3-stub-gen = { workspace = true, optional = true }

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
bevy = "~0.17"
pyo3 = { version = "~0.27" }
pyo3-stub-gen = { version = "~0.18", default-features = false }

[features]
# absolute minimum pyo3 support. useful for only generating stubs
minimal-pyo3 = ["dep:pyo3", "simple_py_bevy_derive/minimal-pyo3"]
# generate bevy macros without pyo3
bevy = ["dep:bevy"]
# generates python exposed references to bevy owned data
py-bevy = [
    "minimal-pyo3",
    "bevy",
    "simple_py_bevy_derive/py-bevy",
    "pyo3/multiple-pymethods",
]
# generates structs that reference rust owned data
py-ref = [
    "minimal-pyo3",
    "simple_py_bevy_derive/py-ref",
    "pyo3/multiple-pymethods",
]
# testing = [
#     "dep:pyo3",
#     "bevy",
#     "dep:pyo3-stub-gen",
#     "simple_py_bevy_derive/py-bevy",
#     "simple_py_bevy_derive/py-ref",
# ]
